--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 
 <body>
     <h1> Receita arroz carreteiro</h1>
-    </div>
     <div class="beneficios">
-        <h2 class="titulo2">Ingredientes</h2>
+        <h2>Ingredientes</h2>
         <ul>
-            
+
             <li class="itens">3 copos de arroz</li>
             <li class="itens">200 g de bacon fatiado</li>
             <li class="itens">1 tomate grande bem maduro</li>
@@ -27,7 +26,7 @@
 
         </ul>
     </div>
+        <h2>Modo de Preparo</h2>
 </body>
 
 </html>
-Ingredientes
