--- a/index.html
+++ b/index.html
@@ -22,11 +22,22 @@
             <li class="itens">500 g de carne seca</li>
             <li class="itens">200 g de calabresa</li>
             <li class="itens">1 cebola grande</li>
-            <li class="itens">Salsa</li> 
+            <li class="itens">Salsa</li>
 
         </ul>
     </div>
-        <h2>Modo de Preparo</h2>
+    <h2>Modo de Preparo</h2>
+    <p>Para preparar um delicioso arroz carreteiro, comece cozinhando a carne seca na panela de pressão. Quando estiver
+        macia, retire, espere esfriar e desfie. Reserve.</p>
+
+    <p>Em seguida, corte a pele da linguiça calabresa e do bacon, picando-os em cubos. Pique também a cebola e o tomate
+        (sem as sementes).</p>
+    <p>Em uma panela grande, refogue o bacon e a calabresa até dourarem bem. Adicione a cebola, o tomate, a pimenta
+        calabresa e a carne desfiada, misturando tudo.</p>
+    <p>Agora, acrescente o arroz e refogue por alguns minutos. Adicione a água, corrija o sal se necessário e misture.
+        Abaixe o fogo, tampe a panela e cozinhe até a água secar.</p>
+    <p>Para finalizar, coloque a salsinha por cima. Sirva o arroz carreteiro quente.</p>
+
 </body>
 
 </html>
