--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </div>
     <h2>Modo de Preparo</h2>
     <p>Para preparar um delicioso arroz carreteiro, comece cozinhando a carne seca na panela de pressão. Quando estiver
-        macia, retire, espere esfriar e desfie. Reserve.Em seguida, corte a pele da linguiça calabresa e do bacon,
+        macia, retire, espere esfriar e desfie. <p>Reserve.Em seguida, corte a pele da linguiça calabresa e do bacon,
         picando-os em cubos. Pique também a cebola e o tomate
-        (sem as sementes).Em uma panela grande, refogue o bacon e a calabresa até dourarem bem. Adicione a cebola, o
+        (sem as sementes).</p>Em uma panela grande, refogue o bacon e a calabresa até dourarem bem. Adicione a cebola, o
         tomate, a pimenta
         calabresa e a carne desfiada, misturando tudo.Agora, acrescente o arroz e refogue por alguns minutos. Adicione a
         água, corrija o sal se necessário e misture.
