--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         picando-os em cubos. Pique também a cebola e o tomate
         (sem as sementes).</p>Em uma panela grande, refogue o bacon e a calabresa até dourarem bem. Adicione a cebola, o
         tomate, a pimenta
-        calabresa e a carne desfiada, misturando tudo.Agora, acrescente o arroz e refogue por alguns minutos. Adicione a
+        calabresa e a carne desfiada, misturando tudo. <p> Agora, acrescente o arroz e refogue por alguns minutos. Adicione a
         água, corrija o sal se necessário e misture.
         Abaixe o fogo, tampe a panela e cozinhe até a água secar.Para finalizar, coloque a salsinha por cima. Sirva o
         arroz carreteiro quente.</p>
