--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         tomate, a pimenta
         calabresa e a carne desfiada, misturando tudo. <p> Agora, acrescente o arroz e refogue por alguns minutos. Adicione a
         água, corrija o sal se necessário e misture.
-        Abaixe o fogo, tampe a panela e cozinhe até a água secar.Para finalizar, coloque a salsinha por cima. Sirva o
+        Abaixe o fogo, tampe a panela e cozinhe até a água secar.Para finalizar, coloque a salsinha por cima.</p> <p>Sirva o
         arroz carreteiro quente.</p>
 
 </body>
