--- a/index.html
+++ b/index.html
@@ -28,14 +28,22 @@
     </div>
     <h2>Modo de Preparo</h2>
     <p>Para preparar um delicioso arroz carreteiro, comece cozinhando a carne seca na panela de pressão. Quando estiver
-        macia, retire, espere esfriar e desfie. <p>Reserve.Em seguida, corte a pele da linguiça calabresa e do bacon,
+        macia, retire, espere esfriar e desfie.
+    <p>Reserve.Em seguida, corte a pele da linguiça calabresa e do bacon,
         picando-os em cubos. Pique também a cebola e o tomate
         (sem as sementes).</p>Em uma panela grande, refogue o bacon e a calabresa até dourarem bem. Adicione a cebola, o
-        tomate, a pimenta
-        calabresa e a carne desfiada, misturando tudo. <p> Agora, acrescente o arroz e refogue por alguns minutos. Adicione a
+    tomate, a pimenta
+    calabresa e a carne desfiada, misturando tudo. <p> Agora, acrescente o arroz e refogue por alguns minutos. Adicione
+        a
         água, corrija o sal se necessário e misture.
-        Abaixe o fogo, tampe a panela e cozinhe até a água secar.Para finalizar, coloque a salsinha por cima.</p> <p>Sirva o
+        Abaixe o fogo, tampe a panela e cozinhe até a água secar.Para finalizar, coloque a salsinha por cima.</p>
+    <p>Sirva o
         arroz carreteiro quente.</p>
+
+    <h2>informações adicionais</h2>
+    <p>Um arroz carreteiro bem feito não tem como desagradar a ninguém! A mistura de arroz, carne seca, linguiça, bacon,
+        tomate e temperos tem origem com os carreteiros: homens que levavam mercadorias em carretas puxadas por bois
+        pelo interior do país no início do século passado.</p>
 
 </body>
 
