--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <h2>informações adicionais</h2>
     <p>Um arroz carreteiro bem feito não tem como desagradar a ninguém! A mistura de arroz, carne seca, linguiça, bacon,
         tomate e temperos tem origem com os carreteiros: homens que levavam mercadorias em carretas puxadas por bois
-        pelo interior do país no início do século passado.Eles levavam charque salgado nas suas viagens para garantir
+        pelo interior do país no início do século passado.</p> <p>Eles levavam charque salgado nas suas viagens para garantir
         que a carne não estragaria durante a viagem. E para as refeições, misturavam ela com arroz pela maior
         praticidade. A versão moderna adicionou alguns ingredientes que a deixou ainda mais deliciosa, mas ainda traz
         algumas características da receita original.</p>
