--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         algumas características da receita original.</p>
 
 
-        <img src="essa.webp" alt="gui">
-        
+        <img src="arroz-carreteiro.webp" alt="gui">
+
 </body>
 
 </html>
