--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
 
         <img src="arroz-carreteiro.webp" alt="gui">
 
+          <a href="https://youtu.be/NXt_hhULhBA?si=2SMJ0dE66PHw7uFa">
+                <img src="video.png" alt=""> </a>
+
+
 </body>
 
 </html>
