--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <img src="arroz-carreteiro.webp" alt="gui">
 
           <a href="https://youtu.be/NXt_hhULhBA?si=2SMJ0dE66PHw7uFa">
-                <img src="video.png" alt=""> </a>
+                <img src="esse.png" alt=""> </a>
 
 
 </body>
