--- a/index.html
+++ b/index.html
@@ -52,12 +52,25 @@
 
     <img src="arroz-carreteiro.webp" alt="gui">
 
-    <a href="https://youtu.be/NXt_hhULhBA?si=2SMJ0dE66PHw7uFa">
-        <img src="<iframe width=" 560" height="315" src="https://www.youtube.com/embed/B28TWWlxT8A?si=VC0Q9gtYa9QE9tG9"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" alt=""> </a>
+    <!DOCTYPE html>
+    <html>
 
+    <head>
+        <title>Vídeo em HTML</title>
+    </head>
+
+    <body>
+
+        <h1>Meu Vídeo Favorito</h1>
+
+        <video width="640" height="360" controls>
+            <source src="meu_video.mp4" type="video/mp4">
+            Seu navegador não suporta a tag de vídeo.
+        </video>
+
+    </body>
+
+    </html>
 
 </body>
 
