--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         algumas características da receita original.</p>
 
 
-  
+
 
     <!DOCTYPE html>
     <html>
@@ -61,10 +61,14 @@
 
     <body>
 
-        <h1>Meu Vídeo Favorito</h1>
+        <h1>Vídeo da receita</h1>
 
         <video width="640" height="360" controls>
-            <source src="meu_video.mp4" type="video/mp4">
+            <source src="<iframe width=" 560" height="315"
+                src="https://www.youtube.com/embed/gE73u2B1C4Q?si=t3CKCCx-sreQyURE" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" type="video/mp4">
             Seu navegador não suporta a tag de vídeo.
         </video>
 
