--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@
         algumas características da receita original.</p>
 
 
-  
+    <img src="arroz-carreteiro.webp" alt="gui">
+
+    <a href="https://youtu.be/NXt_hhULhBA?si=2SMJ0dE66PHw7uFa">
+        <img src="<iframe width=" 560" height="315" src="https://www.youtube.com/embed/B28TWWlxT8A?si=VC0Q9gtYa9QE9tG9"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" alt=""> </a>
+
 
 </body>
 
