--- a/index.html
+++ b/index.html
@@ -59,6 +59,22 @@
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" alt=""> </a>
 
 
+            <!DOCTYPE html>
+<html>
+<head>
+    <title>Link para Vídeo do YouTube</title>
+</head>
+<body>
+
+    <h1>Confira este Vídeo no YouTube</h1>
+
+    <a href="https://i.ytimg.com/an_webp/9NjoqVVPQm4/mqdefault_6s.webp?du=3000&sqp=CITC28UG&rs=AOn4CLA08qNBeKRDj--05Affc8P9DkBDkw" target="_blank">
+        <img src="URL_DA_IMAGEM_DE_PREVISUALIZACAO" alt="Descrição da imagem">
+    </a>
+
+</body>
+</html>
+
 </body>
 
 </html>
