--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
     <h1>Confira este Vídeo no YouTube</h1>
 
-    <a href="https://i.ytimg.com/an_webp/9NjoqVVPQm4/mqdefault_6s.webp?du=3000&sqp=CITC28UG&rs=AOn4CLA08qNBeKRDj--05Affc8P9DkBDkw" target="_blank">
-        <img src="URL_DA_IMAGEM_DE_PREVISUALIZACAO" alt="Descrição da imagem">
+    <a href="https://youtu.be/9NjoqVVPQm4?si=_Pzr2p6BoH2RXMlZ" target="_blank">
+        <img src="https://i.ytimg.com/an_webp/9NjoqVVPQm4/mqdefault_6s.webp?du=3000&sqp=CITC28UG&rs=AOn4CLA08qNBeKRDj--05Affc8P9DkBDkw" alt="Descrição da imagem">
     </a>
 
 </body>
