--- a/index.html
+++ b/index.html
@@ -59,28 +59,21 @@
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" alt=""> </a>
 
 
-    <!DOCTYPE html>
-    <html>
+            <!DOCTYPE html>
+<html>
+<head>
+    <title>Link para Vídeo do YouTube</title>
+</head>
+<body>
 
-    <head>
-        <title>Link para Vídeo do YouTube</title>
-    </head>
+    <h1>Confira este Vídeo no YouTube</h1>
 
-    <body>
+    <a href="<iframe width="560" height="315" src="https://www.youtube.com/embed/9NjoqVVPQm4?si=90Fbmp2jgERiW_fY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>">
+        <img src="https://i.ytimg.com/an_webp/9NjoqVVPQm4/mqdefault_6s.webp?du=3000&sqp=CITC28UG&rs=AOn4CLA08qNBeKRDj--05Affc8P9DkBDkw" alt="Descrição da imagem">
+    </a>
 
-        <h1>Confira este Vídeo no YouTube</h1>
-
-        <a href="<iframe width=" 560" height="315" src="https://www.youtube.com/embed/9NjoqVVPQm4?si=90Fbmp2jgERiW_fY"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" target="_blank">
-            <img src="https://i.ytimg.com/an_webp/9NjoqVVPQm4/mqdefault_6s.webp?du=3000&sqp=CITC28UG&rs=AOn4CLA08qNBeKRDj--05Affc8P9DkBDkw"
-                alt="Descrição da imagem">
-        </a>
-
-    </body>
-
-    </html>
+</body>
+</html>
 
 </body>
 
