--- a/index.html
+++ b/index.html
@@ -51,22 +51,18 @@
 
 
     <img src="arroz-carreteiro.webp" alt="gui">
+    
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/gE73u2B1C4Q?si=BZXnimt7joYuc5Zn"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-           <!DOCTYPE html>
-<html>
-<head>
-    <title>Link para Vídeo do YouTube</title>
-</head>
-<body>
 
-    <h1>Confira este Vídeo no YouTube</h1>
 
-    <a href="<iframe width="700" height="500" src="https://www.youtube.com/embed/9NjoqVVPQm4?si=90Fbmp2jgERiW_fY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <img src="https://i.ytimg.com/an_webp/9NjoqVVPQm4/mqdefault_6s.webp?du=3000&sqp=CITC28UG&rs=AOn4CLA08qNBeKRDj--05Affc8P9DkBDkw" alt="Descrição da imagem">
-    </a>
 
-</body>
-</html>
+
+
+
 
 </body>
 
