--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receita</title>
-
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -51,7 +51,7 @@
 
 
     <img src="arroz-carreteiro.webp" alt="gui">
-    
+
     <iframe width="560" height="315" src="https://www.youtube.com/embed/gE73u2B1C4Q?si=BZXnimt7joYuc5Zn"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
